UI improvements: larger UK flag, compact contact form, fix language routing
- Navbar: Increase UK flag size (text-2xl -> text-4xl, remove btn-sm)
- Contact form: Reorganize layout for compact design
  - Row 2: Phone | Email | Client Type (3 cols)
  - Row 3: Service | Language (2 cols)
- Fix language routing for /en/adatvedelem and /en/aszf
- Update button text: 'Call Now' instead of 'Urgent - call back'

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -181,7 +181,7 @@
       "privacy_suffix": "and consent to the processing of my personal data",
       "submit": "Request quote",
       "submit_loading": "Sending…",
-      "urgent_call": "Urgent – call back within 4 hours"
+      "urgent_call": "📞 Call Now"
     },
     "trust": {
       "response": "I respond within 1 business day",
