--- a/frontend/src/i18n/hu.json
+++ b/frontend/src/i18n/hu.json
@@ -187,7 +187,7 @@
       "privacy_suffix": "és hozzájárulok személyes adataim kezeléséhez",
       "submit": "Ajánlatot kérek",
       "submit_loading": "Küldés…",
-      "urgent_call": "Sürgős – hívjon vissza 4 órán belül"
+      "urgent_call": "📞 Hívás most"
     },
     "trust": {
       "response": "Válaszolok 1 munkanapon belül",
